# duet

./: .gitignore  notes.txt
c/: CMakeLists.txt  DUET C Testing.ipynb  README.md  duet-lib.ipynb  duet.cpp  duet.h  fast_math.cpp  fast_math.hpp  libDUET.dylib  mean_shift.hpp
c/esp-idf-dummy/: esp_log.h  malloc.h  sdkconfig.h
python/: README.md  alpha-delta.csv  duet-opt.ipynb  duet-opt.py  duet.ipynb  duet_base.py  duet_ms.py  duet_opt.py  duet_orig.py  mean-shift.ipynb  mean_shift.py  rana_cluster_assignment_metrics.ipynb  source_generation.py  weights.csv
